# rdiff-rs

./: .travis.yml  Cargo.toml  README.md  TODO.md  appveyor.yml  build.rs
capi/: Cargo.toml  README.md  build.rs
capi/ctests/: Cargo.toml  Makefile  README.md  build.rs
capi/ctests/src/: ctests.c  rdiff_capi_ctests.h  version_test.c
capi/ctests/tests/: run_ctests.rs  version_test.c
capi/include/: rdiff.h
capi/src/: lib.rs
capi/tests/: run_ctests.rs
ctests/: Makefile
ctests/src/: ctests.c  rdiff_capi_ctests.h  version_test.c
include/: librdiff.h
src/: lib.rs  magic.rs  mksum.rs  rollsum.rs
tests/: run_ctests.rs
