[package]
name = "librdiff"
# Eventually this will step to "3.0.0" to match with C librsync.
version = "0.0.0" 
authors = ["Martin Pool <mbp@sourcefrog.net>"]
description = "Generate and apply diffs relative to file signatures, like rdiff."
repository = "https://github.com/sourcefrog/librdiff-rs"
categories = ["algorithms"]
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["rlib", "dylib", "lib"]

[workspace]
members = ["capi"]