[package]
name = "rdiff"
version = "0.0.0"  # Eventually this will step to "3.0.0" to match with C librsync.
authors = ["Martin Pool <mbp@sourcefrog.net>"]
description = "Generate and apply diffs relative to file signatures, like rdiff."
repository = "https://github.com/sourcefrog/rdiff-rs"
categories = ["algorithms"]
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[workspace]
members = ["capi", "capi/ctests"]

[dependencies]
byteorder = "1"
cast = "0.2.2"