[package]
name = "librdiff-capi"
version = "3.0.0"
authors = ["Martin Pool <mbp@sourcefrog.net>"]
build = "build.rs"

[lib]
# Build a staticlib, to be used by C programs. Also build a rlib
# so it can be linked into Rust programs, although that should be rare aside
# from these tests.
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = "0.2"
librdiff = { version = "^3.0.0", path = "../librdiff-rs" }
